<?xml version="1.0"?>
<package>
  <name>common_srvs</name>
  <version>0.0.8</version>
  <description>common service definitions</description>

  <author>Daniel Dugas</author>
  <maintainer email="daniel@dugas.ch">Daniel Dugas</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>genmsg</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
